# BetterEdit

./: .gdmake  .gitignore  .gitmodules  .luarc.json  BetterEdit.cpp  BetterEdit.hpp  CMakeLists.txt  ColorSelectPopup.cpp  EditorPauseLayer.cpp  EditorUI.cpp  GJRotationControl.cpp  GJScaleControl.cpp  GJScaleControl.hpp  HSVWidgetPopup.cpp  LICENSE  README.md  RGBColorInputWidget.hpp  SetGroupIDLayer.cpp  about.md  changelog.md  changes.md  changes.txt  commit.bat  info.js  main.cpp  mod.json  run.bat  runner.cpp  scripting.md  support.md  utils.hpp
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  crash-report.md  crash-report.yml  crash_report.md  suggestion.md  suggestion.yml
.github/workflows/: build.yml  main.yml
api/: CMakeLists.txt  about.md  mod.json
api/include/: API.hpp  MoreTabs.hpp  Utils.hpp
api/src/: MoreTabs.cpp  Utils.cpp
docs/: Contributing.md  Forkers  Future.md  Swipe.md  WhyGeode.md
hooks/: CustomizeObjectLayer.cpp  EditLevelLayer.cpp  EditorPauseLayer.cpp  EditorPauseLayer.hpp  EditorUI.cpp  EditorUI.hpp  GJRotationControl.cpp  GJScaleControl.cpp  HSVWidgetPopup.cpp  LevelEditorLayer.cpp  LoadingLayer.cpp  PauseLayer.cpp  ScaleTextDelegate.hpp  SetGroupIDLayer.cpp  SetupPickupTriggerPopup.cpp  UILayer.cpp  freezeFix.cpp  gridSize.cpp  passTouch.hpp  saveHook.cpp
include/: Base64.hpp  Macros.hpp  ModifyEditor.hpp  MoreTabs.hpp  ZlibHelper.cpp  ZlibHelper.hpp
include/objects/: ObjectType.hpp
include/other/: AutoGrowingLayout.hpp  CallStdFunc.hpp  Utils.hpp  ValueTo.hpp
include/tracking/: Tracking.hpp
include/ui/: Clip.hpp  InfoPopup.hpp  Label.hpp  Tag.hpp
resources/: BE_ContextSheet01-uhd.plist  BE_GameSheet01-hd.plist  BE_GameSheet01-uhd.plist  BE_GameSheet01.plist  LICENSE  installation.txt  objects.jsonc
resources/other/: BE_GameSheet01.tps
resources/res/: BE_ContextSheet01-hd.plist  BE_ContextSheet01-uhd.plist  BE_ContextSheet01.plist  BE_GameSheet01-hd.plist  BE_GameSheet01-uhd.plist  BE_GameSheet01.plist  LICENSE  installation.txt
scripts/: Circle.swipe  CreateLoop.lua  Groups.lua  LogProperties.lua  NextFree.lua  ObjectList.lua  SelectRandom.swipe  Test.swipe  Testing.lua  gd.lua
src/: BetterEdit.cpp  BetterEdit.hpp  ModifyEditor.cpp  MoreTabs.cpp  MoreTabs.hpp  console.cpp  console.hpp  main.cpp  offsets.hpp
src/Features/: CenterScaleUI.cpp  ExtraObjInfo.cpp  HighlightTriggers.cpp  Keybinds.cpp  NewColorSelect.cpp  Percentage.cpp  PlaytestLagFix.cpp  Settings.cpp  SmartStartPos.cpp  StartPosSwitcher.cpp  ViewMode.cpp  ViewTab.cpp  ZoomWithMouse.cpp
src/MoreTabs/: MoreTabs.cpp  MoreTabs.hpp
src/Other/: AutoGrowingLayout.cpp  Utils.cpp  Utils.hpp
src/VisibilityToggle/: VisibilityToggle.cpp
src/features/: BESettingsButton.cpp  BackToContentButton.cpp  BetterColorSelect.cpp  BetterFontSelect.cpp  BetterLiveColor.cpp  BetterSelect.cpp  BetterSwipe.cpp  ButtonRowsBypass.cpp  CenterScaleUI.cpp  ColorSelect.cpp  CopyParticleString.cpp  CopyToClipboard.cpp  CrashRecovery.cpp  DelayedSpawnLine.cpp  EditMixedValues.cpp  EditorPauseUIScaling.cpp  EditorUIScaling.cpp  EnterBPMLayer.cpp  EnterBPMLayer.hpp  ExtraObjInfo.cpp  FixGJTransformControl.cpp  FixMouseControls.cpp  ForceHideTriggerUI.cpp  GlobalClipboard.cpp  GridScaling.cpp  GridScaling.hpp  GridSize.cpp  HSVPreview.cpp  HideUIButton.cpp  HighlightTriggers.cpp  ImportExportParticles.cpp  ImprovedScaleAndRotate.cpp  Keybinds.cpp  LDMObjectCount.cpp  MoveMenu.cpp  NewColorSelect.cpp  NextFreeLayer.cpp  NextFreeOffset.cpp  Percentage.cpp  PinchToZoom.cpp  (+19 more)
src/hooks/: GJRotationControl.cpp  GJRotationControl.hpp
src/layers/: EditorUI.cpp  EditorUI.hpp  ToolsLayer.cpp  ToolsLayer.hpp
src/nodes/: BrownAlertDelegate.cpp  BrownAlertDelegate.hpp  InputNode.cpp  InputNode.hpp
src/objects/: ObjectType.cpp  ObjectType.hpp
src/other/: AutoGrowingLayout.cpp  AutoGrowingLayout.hpp  BEShared.cpp  BEShared.hpp  BrownAlertDelegate.cpp  BrownAlertDelegate.hpp  CallStdFunc.cpp  KeybindUtils.hpp  Utils.cpp  Utils.hpp  ValueTo.hpp
src/script/: Attr.cpp  BinOp.cpp  Expr.cpp  Flow.cpp  Ops.cpp  Parser.cpp  Parser.hpp  Token.cpp  Value.cpp
src/scripting/: LuaHelper.cpp  LuaHelper.hpp  LuaManager.cpp  LuaManager.hpp  PropertyGroup.cpp  PropertyGroup.hpp  README.md  ScriptInfo.hpp  ScriptSelectLayer.cpp  ScriptSelectLayer.hpp  hooks.cpp
src/tools/: PasteLayer.cpp  PasteLayer.hpp  RemapLayer.cpp  RemapLayer.hpp
src/tracking/: DispatchTracking.cpp  Tracking.cpp  Tracking.hpp
src/ui/: Clip.cpp  Clip.hpp  InfoPopup.cpp  InfoPopup.hpp  Label.cpp  Label.hpp  Tag.cpp  Tag.hpp
src/utils/: EditCommandExt.cpp  EditCommandExt.hpp  EditableBMLabelProxy.cpp  EditableBMLabelProxy.hpp  Editor.cpp  Editor.hpp  EditorExitEvent.cpp  EditorExitEvent.hpp  EditorViewOnlyMode.cpp  EditorViewOnlyMode.hpp  HandleUIHide.cpp  HandleUIHide.hpp  HolyUB.hpp  NextFreeOffsetInput.cpp  NextFreeOffsetInput.hpp  Patching.cpp  Patching.hpp  PopupWithCorners.hpp  Pro.cpp  Pro.hpp  Warn.hpp
submodules/cocos2dx/: pugixml.lib
swipe-vscode/: language-configuration.json  package.json
swipe-vscode/syntaxes/: swipe.tmLanguage.json
templates/: TemplateManager.cpp  TemplateManager.hpp  TemplateMenu.cpp  TemplateMenu.hpp  tab.cpp  templates.cpp
tools/Actions/: move.trgr
utils/: BGLabel.cpp  BGLabel.hpp  InfoButton.cpp  InfoButton.hpp  addTab.cpp  addTab.hpp  moveGameLayer.cpp  moveGameLayer.hpp
(+377 files in other folders)
